--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "morgan": "^1.10.0"
-  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.16"
   }
 }
