--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "nodemon -L ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,7 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "mongoose": "^6.3.6",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.16"
   }
